[package]
name = "servur"
version = "0.3.0"
license = "MIT"
authors = ["Anthony Nowell <anowell@gmail.com>"]

[dependencies.rustc-serialize]
git = "https://github.com/rust-lang/rustc-serialize.git"

[dependencies.nickel]
git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies.http]
git = "https://github.com/nickel-org/rust-http.git"
